--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="vendor/leaflet/leaflet.css">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кексобукинг</title>
 </head>
@@ -22,7 +24,6 @@
 
       <!-- Блок для вставки карты -->
       <div class="map__canvas" id="map-canvas"></div>
-
       <!-- Фильтрация объявлений -->
       <div class="map__filters-container">
         <form action="#" class="map__filters" autocomplete="off">
@@ -247,6 +248,8 @@
       <button type="button" class="error__button">Попробовать снова</button>
     </div>
   </template>
+  <script src="vendor/nouislider/nouislider.js" type="text/javascript"></script>
+  <script src="vendor/leaflet/leaflet.js"></script>
   <script src="vendor/pristine/pristine.min.js"  type="text/javascript"></script>
   <script src="js/main.js" type="module"></script>
 </body>
